# agent-poker

./: .dockerignore  .gitignore  Anchor.toml  Dockerfile  README.md  package.json  pinocchio.md  plan.md  pnpm-lock.yaml  prettier.config.mjs  railway.toml  research.md  tsconfig.base.json  tsconfig.json  turbo.json
apps/game-server/: .arena-state.json  .env.example  package.json  tsconfig.json
apps/game-server/idl/: agent_poker_agent.json  agent_poker_betting.json  agent_poker_game.json
apps/game-server/src/: app.ts  auto-matchmaker.ts  llm-gateway.ts  matchmaker.ts  on-chain-reader.ts  orchestrator.ts  server.ts  solana-client.ts  types.ts  ws-feed.ts
apps/game-server/src/__tests__/: llm-gateway.test.ts  matchmaker.test.ts  orchestrator.test.ts
apps/game-server/src/lib/: arena-agents.ts  arena-persistence.ts  hand-evaluator.ts  templates.ts
apps/game-server/src/plugins/: arena-manager.ts  auto-queue.ts  env.ts  error-handler.ts  game-lifecycle.ts  game-tracker.ts  index.ts  llm.ts  matchmaker.ts  orchestrator.ts  solana-read.ts  solana-write.ts  websocket-feed.ts
apps/game-server/src/routes/: agents.ts  arena.ts  game-history.ts  games.ts  index.ts  queue.ts  (+3 more)
apps/web/: package.json  tsconfig.json
docs/: GAME_MODES.md  PLAN.md  PROJECT_OVERVIEW.md  SYSTEM_DESIGN.md
programs/agent-poker-agent/: Cargo.toml
programs/agent-poker-agent/src/: lib.rs
programs/agent-poker-betting/: Cargo.toml
programs/agent-poker-betting/src/: lib.rs
programs/agent-poker-escrow/: Cargo.toml
programs/agent-poker-escrow/src/: lib.rs
programs/agent-poker-game/: Cargo.toml
programs/agent-poker-game/src/: hand_eval.rs  lib.rs
tests/: agent-poker-agent.ts  agent-poker-betting.ts  agent-poker-escrow.ts  agent-poker-game-er.ts  agent-poker-game.ts  helpers.ts
(+80 files in other folders)
