[package]
name = "agent-poker-agent"
version = "0.1.0"
description = "AgentPoker - Agent creation and funding"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_poker_agent"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
