[package]
name = "agent-poker-escrow"
version = "0.1.0"
description = "AgentPoker - Escrow and fund management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_poker_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
