[package]
name = "agent-poker-game"
version = "0.1.0"
description = "AgentPoker - Game engine and logic"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_poker_game"

[features]
# no-entrypoint = []
# no-idl = []
# no-log-ix-name = []
# cpi = ["no-entrypoint"]
# default = []
# idl-build = ["anchor-lang/idl-build"]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.8.5", features = ["anchor", "disable-realloc", "access-control"] }
ephemeral-vrf-sdk = { version = "0.2.1", features = ["anchor"] }
